[gd_scene load_steps=4 format=3 uid="uid://bawu5eau3t4ek"]

[ext_resource type="Theme" uid="uid://c2kgsk4ffhbwo" path="res://source/resources/main_menu.theme" id="1_a5uwh"]
[ext_resource type="Script" path="res://source/main-menu/Options.gd" id="1_msrcd"]
[ext_resource type="PackedScene" uid="uid://dij5xr8swlfdx" path="res://source/main-menu/Background.tscn" id="2_mgrkx"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a5uwh")
script = ExtResource("1_msrcd")

[node name="Background" parent="." instance=ExtResource("2_mgrkx")]
layout_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "VIDEO"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Screen" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
selected = 0
item_count = 2
popup/item_0/text = "FULLSCREEN"
popup/item_1/text = "WINDOW"
popup/item_1/id = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "MOUSE"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MouseMovementRestricted" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "MOUSE_MOVEMENT_RESTRICTED"

[node name="AIUnitNumbers" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer_AIUnitNumbers" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer_AIUnitNumbers" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label_Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "AI INITIAL UNIT NUMBERS"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/Label_Title"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer_Drone" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label_Drone" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/HBoxContainer_Drone"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "DRONE"

[node name="SpinBox_Drone" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/HBoxContainer_Drone"]
layout_mode = 2
value = 10.0
alignment = 1

[node name="HBoxContainer_Worker" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label_Worker" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/HBoxContainer_Worker"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "WORKER"

[node name="SpinBox_Worker" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/HBoxContainer_Worker"]
layout_mode = 2
value = 10.0
alignment = 1

[node name="HBoxContainer_Helicopter" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label_Helicopter" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/HBoxContainer_Helicopter"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HELICOPTER"

[node name="SpinBox_Helicopter" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/HBoxContainer_Helicopter"]
layout_mode = 2
value = 10.0
alignment = 1

[node name="HBoxContainer_Tank" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label_Tank" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/HBoxContainer_Tank"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "TANK"

[node name="SpinBox_Tank" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/AIUnitNumbers/MarginContainer_AIUnitNumbers/VBoxContainer_AIUnitNumbers/HBoxContainer_Tank"]
layout_mode = 2
value = 10.0
alignment = 1

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_a5uwh")
theme_override_font_sizes/font_size = 28
text = "BACK"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Screen" to="." method="_on_screen_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/MouseMovementRestricted" to="." method="_on_mouse_movement_restricted_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_back_button_pressed"]
